<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_bookmark"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_machine"
        android:text="@string/bookmark"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:background="@drawable/bg_grey_rectangle_rounded"
        android:textColor="@color/black"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_machine"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_edtech"
        android:text="@string/macchine"
        android:padding="16dp"
        android:background="@drawable/bg_grey_rectangle_rounded"
        android:layout_margin="16dp"
        android:textColor="@color/black"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_edtech"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_trending"
        android:text="@string/ed_tech"
        android:padding="16dp"
        android:background="@drawable/bg_grey_rectangle_rounded"
        android:layout_margin="24dp"
        android:textColor="@color/black"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_trending"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_medical"
        android:text="@string/trending"
        android:padding="16dp"
        android:background="@drawable/bg_grey_rectangle_rounded"
        android:layout_margin="16dp"
        android:textColor="@color/black"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_medical"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/medical_tech"
        app:layout_constraintBottom_toTopOf="@id/tv_none"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:background="@drawable/bg_grey_rectangle_rounded"
        android:textColor="@color/black"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_none"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/none"
        app:layout_constraintBottom_toTopOf="@id/tv_continue"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:background="@drawable/bg_grey_rectangle_rounded"
        android:textColor="@color/black"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_continue"
        android:layout_width="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/cont"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:background="@drawable/bg_grey_rectangle_rounded"
        android:textColor="@color/blue"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>